--- a/css/style.css
+++ b/css/style.css
@@ -199,12 +199,30 @@ textarea {
 
 
 
+
+
+
+
+
+
+@font-face {
+    font-family: 'Common Sans';
+    src: url(../fonts/CommonSans-Regular.otf);
+}
+
+
+
+
+
+
+
 body {
-	font-family: 'Roboto Mono', monospace;
+    font-family: 'Common Sans', sans-serif;
+	/*font-family: 'Roboto Mono', monospace;*/
 	font-size: 20px;
 	line-height: 1.4;
 	font-weight: 400;
-	color: #333;
+	color: #222;
 	background: #eee;
 }
 
@@ -218,8 +236,9 @@ body {
 
 .intro-title,
 .intro-text {
-	width: 50%;
-	float: left;
+	/*width: 50%;
+	float: left;*/
+    font-size: 30px;
 }
 
 .intro-title {
@@ -228,8 +247,8 @@ body {
 }
 .intro-text {
 	box-sizing: border-box;
-	padding-left: 3%;
-	font-size: 16px;
+	/*padding-left: 3%;*/
+	/*font-size: 16px;*/
 
 	margin-bottom: 4rem;
 }
