--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <footer>
 	<p class="footer-link">
-		mail: <a href="mailto:info@hectorromo.com">info(@)hectorromo.com</a>
+		<span>mail: </span>
+		<a href="mailto:info@hectorromo.com">info(@)hectorromo.com</a>
 	</p>
 	<p class="footer-link">
-		tel: <a href="tel:+34605678130">+34 605 678 130</a>
+		<span>tel: </span>
+		<a href="tel:+34605678130">+34 605 678 130</a>
 	</p>
 	<p class="footer-link">
 		<a href="https://www.behance.net/hectorromo" target="_blank">behance.net/hectorromo</a>
