--- a/_less/intro.less
+++ b/_less/intro.less
@@ -6,3 +6,9 @@
 	box-sizing: border-box;
 	margin-bottom: 4rem;
 }
+
+@media screen and (max-width: 600px) {
+	.intro-text {
+		margin: 0 0 2rem;
+	}
+}
