--- a/_less/main.less
+++ b/_less/main.less
@@ -4,20 +4,16 @@
 @import 'reset';
 @import 'typebase';
 
-body {
-    // font-family: 'Common Sans', sans-serif;
-	// font-family: 'Roboto Mono', monospace;
-	// font-size: 20px;
-	// line-height: 1.4;
-	// font-weight: 400;
-	// background: #eee;
-	// color: #222;
-}
-
 
 .content {
 	max-width: 85%;
 	margin: 0 auto;
+}
+
+@media screen and (max-width: 600px) {
+	.content {
+		max-width: 90%;
+	}
 }
 
 
