--- a/_less/footer.less
+++ b/_less/footer.less
@@ -5,7 +5,21 @@ footer {
 
 .footer-link {
 	margin: 0;
+
+	&:nth-child(2) {
+		margin-bottom: 0.7rem;
+	}
+}
+.footer-link span {
+	color: #777;
 }
 .footer-link a {
 	text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+	.footer-link {
+		line-height: 1.2rem;
+		font-size: 20px;
+	}
 }
