--- a/_less/portfolio.less
+++ b/_less/portfolio.less
@@ -7,12 +7,13 @@
 }
 
 .portfolio-item {
-	opacity: 0.6;
+
 	width: 47%;
 	margin-bottom: 5%;
 	.transition(.3s);
 }
-.portfolio-item a{
+.portfolio-item span{
+// .portfolio-item a{
 	display: block;
 	position: relative;
 	.clearfix();
@@ -44,3 +45,19 @@
 		.transition(.3s);
 	}
 }
+
+
+
+/* Breakpoints */
+
+@media screen and (max-width: 856px) {
+	.portfolio-item {
+		width: 100%;
+		margin-bottom: 1.5rem;
+	}
+}
+
+// @media screen and (max-width: 600px) {
+// 	.portfolio-item {
+// 	}
+// }
