--- a/_less/typebase.less
+++ b/_less/typebase.less
@@ -1,8 +1,8 @@
 /*! Typebase.less v0.1.0 | MIT License */
 
 @font-face {
-    font-family: 'Common Sans';
-    src: url(../fonts/CommonSans-Regular.otf);
+	font-family: 'Common Sans';
+	src: url(../fonts/CommonSans-Regular.otf);
 }
 
 /* Setup */
@@ -95,8 +95,8 @@ a {
   color: inherit;
   .transition(.3s);
   &:hover {
-    color: blue;
-    .transition(.3s);
+	color: blue;
+	.transition(.3s);
   }
 }
 /* Leading paragraph text */
@@ -106,4 +106,16 @@ a {
 /* Hug the block above you */
 .hug {
   margin-top: 0;
+}
+
+
+
+
+/* Breakpoints */
+
+@media screen and (max-width: 600px) {
+  	/* Setup */
+  	html {
+		font-size: 24px;
+	}
 }
