--- a/_less/portfolio.less
+++ b/_less/portfolio.less
@@ -7,7 +7,6 @@
 }
 
 .portfolio-item {
-
 	width: 47%;
 	margin-bottom: 5%;
 	.transition(.3s);
@@ -22,6 +21,17 @@
 	width: 100%;
 	float: left;
 }
+.portfolio-itemBorder {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 90;
+	border: 2px solid transparent;
+	box-sizing: border-box;
+	.transition(.3s);
+}
 .portfolio-itemBackground { 
 	width: 100%;
     height: 100%;
@@ -29,7 +39,7 @@
     top: 0;
     left: 0;
     display: block;
-    z-index: 100;
+    z-index: 80;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -39,7 +49,10 @@
 .portfolio-item:hover {
 	opacity: 1;
 	.transition(.3s);
-
+	
+	.portfolio-itemBorder {
+		border-color: blue;
+	}
 	.portfolio-itemBackground {
 		opacity: 0;
 		.transition(.3s);
