--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,20 @@ header {
   width: 100%;
   float: left;
 }
+.portfolio-itemBorder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 90;
+  border: 2px solid transparent;
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
 .portfolio-itemBackground {
   width: 100%;
   height: 100%;
@@ -333,7 +347,7 @@ header {
   top: 0;
   left: 0;
   display: block;
-  z-index: 100;
+  z-index: 80;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -345,6 +359,9 @@ header {
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+}
+.portfolio-item:hover .portfolio-itemBorder {
+  border-color: blue;
 }
 .portfolio-item:hover .portfolio-itemBackground {
   opacity: 0;
