--- a/_less/portfolio.less
+++ b/_less/portfolio.less
@@ -9,7 +9,7 @@
 .portfolio-item {
 	width: 47%;
 	margin-bottom: 5%;
-	.transition(.3s);
+	// .transition(.3s);
 }
 .portfolio-item span{
 // .portfolio-item a{
@@ -20,6 +20,8 @@
 .portfolio-item video {
 	width: 100%;
 	float: left;
+	border: 2px solid transparent;
+    box-sizing: border-box;
 }
 .portfolio-itemBorder {
 	position: absolute;
