--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
     <![endif]-->
+    <script>
+        document.documentElement.className += (("ontouchstart" in document.documentElement) ? ' touch' : ' no-touch');
+    </script>
+
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -30,23 +34,19 @@
 	
         {% include footer.html %}
     </div>
-	<!-- <div id="images"></div>
-		<div class="video"></div> -->
-
 
 		<!-- <script src="node_modules/canvid/canvid.js"></script> -->
 		<script src="js/main.js"></script>
 
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            // e.src='//www.google-analytics.com/analytics.js';
-            // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            // ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+            ga('create', 'UA-80265141-1', 'auto');
+            ga('send', 'pageview');
+        </script>
 </body>
 </html>
