--- a/_less/portfolio.less
+++ b/_less/portfolio.less
@@ -8,7 +8,8 @@
 
 .portfolio-item {
 	width: 47%;
-	margin-bottom: 5%;
+	// margin-bottom: 5%;
+	margin-bottom: 2rem;
 	// .transition(.3s);
 }
 .portfolio-item span{
@@ -18,6 +19,12 @@
 	.clearfix();
 }
 .portfolio-item video {
+	// position: absolute;
+	// top: 0;
+	// left: 0;
+	// width: 100%;
+	// height: 100%;
+
 	width: 100%;
 	float: left;
 	border: 2px solid transparent;
@@ -34,36 +41,82 @@
 	box-sizing: border-box;
 	.transition(.3s);
 }
-.portfolio-itemBackground { 
+.portfolio-itemImage { 
 	width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
+
     display: block;
     z-index: 80;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 1;
+
+   	// img {
+   	// 	max-width: 100%;
+   	// 	position: relative;
+   	// 	float: left;
+   	// }
+}
+.portfolio-itemImage-touch {
+	display: none;
+	max-width: 100%;
 }
 
-.portfolio-item:hover {
+.portfolio-itemExternalLink {
+	text-decoration: none;
+	font-size: 0.6rem;
+	margin-top: 0.2rem;
+	display: inline-block;
+	opacity: 0.5;
+}
+
+
+
+
+/* STATES */
+
+
+// .portfolio-item a:hover {
+.portfolio-item span:hover {
 	opacity: 1;
 	.transition(.3s);
 	
 	.portfolio-itemBorder {
 		border-color: blue;
 	}
-	.portfolio-itemBackground {
+	.portfolio-itemImage {
 		opacity: 0;
 		.transition(.3s);
 	}
 }
 
+.portfolio-itemExternalLink:hover {
+	opacity: 1;
+}
 
 
-/* Breakpoints */
+/* ON TOUCH DEVICE */
+.touch {
+	.portfolio-item video {
+		display: none;
+	}
+
+	// .portfolio-item a:hover {
+	.portfolio-item span:hover {
+		.portfolio-itemImage {
+			opacity: 1;
+		}
+	}
+	.portfolio-itemImage-touch {
+		display: block;
+	}
+}
+
+/* BREAKPOINTS */
 
 @media screen and (max-width: 856px) {
 	.portfolio-item {
