--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ header {
 }
 .portfolio-item {
   width: 47%;
-  margin-bottom: 5%;
+  margin-bottom: 2rem;
 }
 .portfolio-item span {
   display: block;
@@ -338,7 +338,7 @@ header {
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
-.portfolio-itemBackground {
+.portfolio-itemImage {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -351,24 +351,49 @@ header {
   background-repeat: no-repeat;
   opacity: 1;
 }
-.portfolio-item:hover {
+.portfolio-itemImage-touch {
+  display: none;
+  max-width: 100%;
+}
+.portfolio-itemExternalLink {
+  text-decoration: none;
+  font-size: 0.6rem;
+  margin-top: 0.2rem;
+  display: inline-block;
+  opacity: 0.5;
+}
+/* STATES */
+.portfolio-item span:hover {
   opacity: 1;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
-.portfolio-item:hover .portfolio-itemBorder {
+.portfolio-item span:hover .portfolio-itemBorder {
   border-color: blue;
 }
-.portfolio-item:hover .portfolio-itemBackground {
+.portfolio-item span:hover .portfolio-itemImage {
   opacity: 0;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
-/* Breakpoints */
+.portfolio-itemExternalLink:hover {
+  opacity: 1;
+}
+/* ON TOUCH DEVICE */
+.touch .portfolio-item video {
+  display: none;
+}
+.touch .portfolio-item span:hover .portfolio-itemImage {
+  opacity: 1;
+}
+.touch .portfolio-itemImage-touch {
+  display: block;
+}
+/* BREAKPOINTS */
 @media screen and (max-width: 856px) {
   .portfolio-item {
     width: 100%;
