--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Hector Romo | Hybrid developer - Frontend, backend, design</title>
-    <meta name="description" content="">
+    <title>Hector Romo | Frontend, backend and design freelance</title>
+    <meta name="description" content="Freelance frontend, backend and design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="shortcut icon" type="image/ico" href="{{site.baseurl}}/Assets/Images/favico.ico"> -->
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
