fixed color and index layout

--- a/_less/portfolio.less
+++ b/_less/portfolio.less
@@ -86,7 +86,8 @@
 	.transition(.3s);
 	
 	.portfolio-itemBorder {
-		border-color: blue;
+		border-color: @blue;
+		// border-color: blue;
 	}
 	.portfolio-itemImage {
 		opacity: 0;
