--- a/_less/typebase.less
+++ b/_less/typebase.less
@@ -95,7 +95,8 @@ a {
   color: inherit;
   .transition(.3s);
   &:hover {
-	color: blue;
+  color: @blue;
+	// color: blue;
 	.transition(.3s);
   }
 }
