--- a/css/main.css
+++ b/css/main.css
@@ -1,426 +1,1 @@
-/*---------------------------------------------------
-    LESS Elements 0.9
-  ---------------------------------------------------
-    A set of useful LESS mixins
-    More info at: http://lesselements.com
-  ---------------------------------------------------*/
-/* Micro ClearFix Mixin */
-.clearfix {
-  zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  content: "";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0b1 | 201101 
-   NOTE: WORK IN PROGRESS
-   USE WITH CAUTION AND TEST WITH ABANDON */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-/* remember to define visible focus styles! 
-:focus {
-	outline: ?????;
-} */
-/* remember to highlight inserts somehow! */
-ins {
-  text-decoration: none;
-}
-del {
-  text-decoration: line-through;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-/*! Typebase.less v0.1.0 | MIT License */
-@font-face {
-  font-family: 'Common Sans';
-  src: url(../fonts/CommonSans-Regular.otf);
-}
-/* Setup */
-html {
-  /* Change default typefaces here */
-
-  font-family: 'Common Sans', sans-serif;
-  font-size: 30px;
-  -webkit-font-smoothing: antialiased;
-  color: #222;
-}
-/* Copy & Lists */
-p {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 0;
-}
-ul,
-ol {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-ul li,
-ol li {
-  line-height: 1.5rem;
-}
-ul ul,
-ol ul,
-ul ol,
-ol ol {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-blockquote {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-/* Headings */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  /* Change heading typefaces here */
-
-  margin-top: 1.5rem;
-  margin-bottom: 0;
-  line-height: 1.5rem;
-}
-/* Tables */
-table {
-  margin-top: 1.5rem;
-  border-spacing: 0px;
-  border-collapse: collapse;
-}
-table td,
-table th {
-  padding: 0;
-  line-height: 33px;
-}
-/* Code blocks */
-code {
-  vertical-align: bottom;
-}
-a {
-  color: inherit;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-a:hover {
-  color: blue;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-/* Leading paragraph text */
-.lead {
-  font-size: 1.414rem;
-}
-/* Hug the block above you */
-.hug {
-  margin-top: 0;
-}
-/* Breakpoints */
-@media screen and (max-width: 600px) {
-  /* Setup */
-  html {
-    font-size: 24px;
-  }
-}
-.content {
-  max-width: 85%;
-  margin: 0 auto;
-}
-@media screen and (max-width: 600px) {
-  .content {
-    max-width: 90%;
-  }
-}
-header {
-  margin: 3rem 0 2rem;
-}
-.header-title {
-  margin: 0;
-}
-.header-title a {
-  text-decoration: none;
-  color: blue;
-}
-@media screen and (max-width: 600px) {
-  header {
-    margin: 2rem 0 1rem;
-  }
-}
-.intro-text {
-  box-sizing: border-box;
-  margin-bottom: 4rem;
-}
-@media screen and (max-width: 600px) {
-  .intro-text {
-    margin: 0 0 2rem;
-  }
-}
-.portfolio {
-  padding: 0;
-  list-style: none;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: -ms-flex;
-  display: flex;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.portfolio-item {
-  width: 47%;
-  margin-bottom: 2rem;
-}
-.portfolio-item span {
-  display: block;
-  position: relative;
-  zoom: 1;
-}
-.portfolio-item span:before,
-.portfolio-item span:after {
-  content: "";
-  display: table;
-}
-.portfolio-item span:after {
-  clear: both;
-}
-.portfolio-item video {
-  width: 100%;
-  float: left;
-  border: 2px solid transparent;
-  box-sizing: border-box;
-}
-.portfolio-itemBorder {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 90;
-  border: 2px solid transparent;
-  box-sizing: border-box;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.portfolio-itemImage {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  z-index: 80;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  opacity: 1;
-}
-.portfolio-itemImage-touch {
-  display: none;
-  max-width: 100%;
-}
-.portfolio-itemExternalLink {
-  text-decoration: none;
-  font-size: 0.6rem;
-  margin-top: 0.2rem;
-  display: inline-block;
-  opacity: 0.5;
-}
-/* STATES */
-.portfolio-item span:hover {
-  opacity: 1;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.portfolio-item span:hover .portfolio-itemBorder {
-  border-color: blue;
-}
-.portfolio-item span:hover .portfolio-itemImage {
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.portfolio-itemExternalLink:hover {
-  opacity: 1;
-}
-/* ON TOUCH DEVICE */
-.touch .portfolio-item video {
-  display: none;
-}
-.touch .portfolio-item span:hover .portfolio-itemImage {
-  opacity: 1;
-}
-.touch .portfolio-itemImage-touch {
-  display: block;
-}
-.touch .portfolio-itemBorder {
-  display: none;
-}
-/* BREAKPOINTS */
-@media screen and (max-width: 856px) {
-  .portfolio-item {
-    width: 100%;
-    margin-bottom: 1.5rem;
-  }
-}
-footer {
-  margin: 3rem 0;
-}
-.footer-link {
-  margin: 0;
-}
-.footer-link:nth-child(2) {
-  margin-bottom: 0.7rem;
-}
-.footer-link span {
-  color: #777;
-}
-.footer-link a {
-  text-decoration: none;
-}
-@media screen and (max-width: 600px) {
-  .footer-link {
-    line-height: 1.2rem;
-    font-size: 20px;
-  }
-}
+.clearfix{zoom:1}.clearfix:before,.clearfix:after{content:"";display:table}.clearfix:after{clear:both}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}/*! Typebase.less v0.1.0 | MIT License */@font-face{font-family:'Common Sans';src:url(../fonts/CommonSans-Regular.otf)}html{font-family:'Common Sans',sans-serif;font-size:30px;-webkit-font-smoothing:antialiased;color:#222}p{line-height:1.5rem;margin-top:1.5rem;margin-bottom:0}ul,ol{margin-top:1.5rem;margin-bottom:1.5rem}ul li,ol li{line-height:1.5rem}ul ul,ol ul,ul ol,ol ol{margin-top:0;margin-bottom:0}blockquote{line-height:1.5rem;margin-top:1.5rem;margin-bottom:1.5rem}h1,h2,h3,h4,h5,h6{margin-top:1.5rem;margin-bottom:0;line-height:1.5rem}table{margin-top:1.5rem;border-spacing:0;border-collapse:collapse}table td,table th{padding:0;line-height:33px}code{vertical-align:bottom}a{color:inherit;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}a:hover{color:#1a0dab;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}.lead{font-size:1.414rem}.hug{margin-top:0}@media screen and (max-width:600px){html{font-size:24px}}.content{max-width:85%;margin:0 auto}@media screen and (max-width:600px){.content{max-width:90%}}header{margin:3rem 0 2rem}.header-title{margin:0}.header-title a{text-decoration:none;color:#1a0dab}@media screen and (max-width:600px){header{margin:2rem 0 1rem}}.intro-text{box-sizing:border-box;margin-bottom:4rem}@media screen and (max-width:600px){.intro-text{margin:0 0 2rem}}.portfolio{padding:0;list-style:none;display:-webkit-flex;display:-moz-flex;display:-ms-flexbox;display:-ms-flex;display:flex;-webkit-justify-content:space-between;-moz-justify-content:space-between;-ms-justify-content:space-between;justify-content:space-between;-webkit-flex-wrap:wrap;-moz-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}.portfolio-item{width:47%;margin-bottom:2rem}.portfolio-item span{display:block;position:relative;zoom:1}.portfolio-item span:before,.portfolio-item span:after{content:"";display:table}.portfolio-item span:after{clear:both}.portfolio-item video{width:100%;float:left;border:2px solid transparent;box-sizing:border-box}.portfolio-itemBorder{position:absolute;top:0;left:0;width:100%;height:100%;z-index:90;border:2px solid transparent;box-sizing:border-box;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}.portfolio-itemImage{width:100%;height:100%;position:absolute;top:0;left:0;display:block;z-index:80;background-position:center;background-size:cover;background-repeat:no-repeat;opacity:1}.portfolio-itemImage-touch{display:none;max-width:100%}.portfolio-itemExternalLink{text-decoration:none;font-size:.6rem;margin-top:.2rem;display:inline-block;opacity:.5}.portfolio-item span:hover{opacity:1;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}.portfolio-item span:hover .portfolio-itemBorder{border-color:#1a0dab}.portfolio-item span:hover .portfolio-itemImage{opacity:0;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}.portfolio-itemExternalLink:hover{opacity:1}.touch .portfolio-item video{display:none}.touch .portfolio-item span:hover .portfolio-itemImage{opacity:1}.touch .portfolio-itemImage-touch{display:block}.touch .portfolio-itemBorder{display:none}@media screen and (max-width:856px){.portfolio-item{width:100%;margin-bottom:1.5rem}}footer{margin:3rem 0}.footer-link{margin:0}.footer-link:nth-child(2){margin-bottom:.7rem}.footer-link span{color:#777}.footer-link a{text-decoration:none}@media screen and (max-width:600px){.footer-link{line-height:1.2rem;font-size:20px}}
