--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="intro"><p class="intro-text">{{content}}</p></div>
+{{content}}
 
 <ul class="portfolio">
     {% assign projects = site.projects | sort:"published_date" | reverse %}
