--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -23,6 +23,7 @@ layout: default
             <a class="portfolio-itemExternalLink" href="{{ project.site.url }}" target="_blank">{{ project.site.url_title }}</a>
             <!-- <p>{{project.title}}</p> -->
             <!-- </a> -->
+            <a class="portfolio-itemExternalLink" href="{{ project.url }}">test</a>
         </li>
     {% endfor %}
 </ul>
