--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,17 +29,21 @@
 
     <div class="content">
         {% include header.html %}
-	   
+
         {{ content }}
+
+        <div id="app"></div>
 	
         {% include footer.html %}
     </div>
 
+
 		<!-- <script src="node_modules/canvid/canvid.js"></script> -->
-		<script src="js/main.js"></script>
+        <script src="js/bundle.js"></script>
+		{% comment %}<script src="js/main.js"></script>{% endcomment %}
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        {% comment %}<script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -47,6 +51,6 @@
 
             ga('create', 'UA-80265141-1', 'auto');
             ga('send', 'pageview');
-        </script>
+        </script>{% endcomment %}
 </body>
 </html>
